@@ -1,46 +1,15 @@
 package dk.digitalidentity.rc.controller.mvc;
 
-import dk.digitalidentity.rc.config.RoleCatalogueConfiguration;
-import dk.digitalidentity.rc.controller.mvc.viewmodel.ConvertSystemRolesForm;
-import dk.digitalidentity.rc.controller.mvc.viewmodel.ItSystemForm;
-import dk.digitalidentity.rc.controller.mvc.viewmodel.OUListForm;
-import dk.digitalidentity.rc.controller.mvc.viewmodel.SystemRoleForm;
-import dk.digitalidentity.rc.controller.mvc.viewmodel.SystemRoleViewModel;
-import dk.digitalidentity.rc.controller.validator.ItSystemValidator;
-import dk.digitalidentity.rc.controller.validator.SystemRoleValidator;
-import dk.digitalidentity.rc.dao.model.ADConfiguration;
-import dk.digitalidentity.rc.dao.model.Client;
-import dk.digitalidentity.rc.dao.model.Domain;
-import dk.digitalidentity.rc.dao.model.ItSystem;
-import dk.digitalidentity.rc.dao.model.ItSystemMaster;
-import dk.digitalidentity.rc.dao.model.OrgUnit;
-import dk.digitalidentity.rc.dao.model.PendingADGroupOperation;
-import dk.digitalidentity.rc.dao.model.SystemRole;
-import dk.digitalidentity.rc.dao.model.SystemRoleAssignment;
-import dk.digitalidentity.rc.dao.model.User;
-import dk.digitalidentity.rc.dao.model.UserRole;
-import dk.digitalidentity.rc.dao.model.enums.ADGroupType;
-import dk.digitalidentity.rc.dao.model.enums.ItSystemType;
-import dk.digitalidentity.rc.dao.model.enums.RoleType;
-import dk.digitalidentity.rc.security.RequireAdministratorRole;
-import dk.digitalidentity.rc.security.RequireReadAccessRole;
-import dk.digitalidentity.rc.security.SecurityUtil;
-import dk.digitalidentity.rc.service.ADConfigurationService;
-import dk.digitalidentity.rc.service.ADGroupMappingService;
-import dk.digitalidentity.rc.service.ClientService;
-import dk.digitalidentity.rc.service.DomainService;
-import dk.digitalidentity.rc.service.ItSystemMasterService;
-import dk.digitalidentity.rc.service.ItSystemService;
-import dk.digitalidentity.rc.service.OrgUnitService;
-import dk.digitalidentity.rc.service.PendingADUpdateService;
-import dk.digitalidentity.rc.service.Select2Service;
-import dk.digitalidentity.rc.service.SettingsService;
-import dk.digitalidentity.rc.service.SystemRoleService;
-import dk.digitalidentity.rc.service.UserRoleService;
-import dk.digitalidentity.rc.service.UserService;
-import jakarta.validation.Valid;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import dk.digitalidentity.rc.dao.model.enums.SystemRoleLinkType;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
@@ -52,71 +21,74 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import dk.digitalidentity.rc.config.Constants;
+import dk.digitalidentity.rc.config.RoleCatalogueConfiguration;
+import dk.digitalidentity.rc.controller.mvc.viewmodel.ConvertSystemRolesForm;
+import dk.digitalidentity.rc.controller.mvc.viewmodel.ItSystemForm;
+import dk.digitalidentity.rc.controller.mvc.viewmodel.OUListForm;
+import dk.digitalidentity.rc.controller.mvc.viewmodel.SystemRoleForm;
+import dk.digitalidentity.rc.controller.mvc.viewmodel.SystemRoleViewModel;
+import dk.digitalidentity.rc.controller.rest.model.ItemPermissionDTO;
+import dk.digitalidentity.rc.controller.validator.ItSystemValidator;
+import dk.digitalidentity.rc.controller.validator.SystemRoleValidator;
+import dk.digitalidentity.rc.dao.model.Domain;
+import dk.digitalidentity.rc.dao.model.ItSystem;
+import dk.digitalidentity.rc.dao.model.ItSystemMaster;
+import dk.digitalidentity.rc.dao.model.OrgUnit;
+import dk.digitalidentity.rc.dao.model.SystemRole;
+import dk.digitalidentity.rc.dao.model.SystemRoleAssignment;
+import dk.digitalidentity.rc.dao.model.UserRole;
+import dk.digitalidentity.rc.dao.model.enums.ItSystemType;
+import dk.digitalidentity.rc.dao.model.enums.RoleType;
+import dk.digitalidentity.rc.rolerequest.model.enums.ApprovableBy;
+import dk.digitalidentity.rc.rolerequest.model.enums.RequestableBy;
+import dk.digitalidentity.rc.security.SecurityUtil;
+import dk.digitalidentity.rc.security.permission.Permission;
+import dk.digitalidentity.rc.security.permission.PermissionConstraint;
+import dk.digitalidentity.rc.security.permission.RequireControllerPermission;
+import dk.digitalidentity.rc.security.permission.RequirePermission;
+import dk.digitalidentity.rc.security.permission.Section;
+import dk.digitalidentity.rc.security.permission.UserPermissionContext;
+import dk.digitalidentity.rc.service.ADGroupMappingService;
+import dk.digitalidentity.rc.service.DomainService;
+import dk.digitalidentity.rc.service.ItSystemMasterService;
+import dk.digitalidentity.rc.service.ItSystemService;
+import dk.digitalidentity.rc.service.OrgUnitService;
+import dk.digitalidentity.rc.service.PendingADUpdateService;
+import dk.digitalidentity.rc.service.Select2Service;
+import dk.digitalidentity.rc.service.SettingsService;
+import dk.digitalidentity.rc.service.SystemRoleService;
+import dk.digitalidentity.rc.service.UserRoleService;
+import dk.digitalidentity.rc.service.UserService;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
+import java.util.HashSet;
+import java.util.Set;
 
 @Slf4j
-@RequireReadAccessRole
+@RequiredArgsConstructor
+@RequireControllerPermission(section = Section.IT_SYSTEM, permission = Permission.READ)
 @Controller
 public class ItSystemController {
+	private final ItSystemService itSystemService;
+	private final SystemRoleService systemRoleService;
+	private final ItSystemValidator itSystemValidator;
+	private final SystemRoleValidator systemRoleValidator;
+	private final ItSystemMasterService itSystemMasterService;
+	private final UserRoleService userRoleService;
+	private final PendingADUpdateService pendingADUpdateService;
+	private final OrgUnitService orgUnitService;
+	private final DomainService domainService;
+	private final UserService userService;
+	private final SettingsService settingsService;
+	private final Select2Service select2Service;
+	private final RoleCatalogueConfiguration configuration;
+	private final ADGroupMappingService adGroupMappingService;
 
-	@Autowired
-	private ItSystemService itSystemService;
-
-	@Autowired
-	private SystemRoleService systemRoleService;
-
-	@Autowired
-	private ItSystemValidator itSystemValidator;
-
-	@Autowired
-	private SystemRoleValidator systemRoleValidator;
-
-	@Autowired
-	private ItSystemMasterService itSystemMasterService;
-
-	@Autowired
-	private SecurityUtil securityUtil;
-
-	@Autowired
-	private UserRoleService userRoleService;
-
-	@Autowired
-	private PendingADUpdateService pendingADUpdateService;
-
-	@Autowired
-	private OrgUnitService orgUnitService;
-
-	@Autowired
-	private DomainService domainService;
-
-	@Autowired
-	private UserService userService;
-
-	@Autowired
-	private SettingsService settingsService;
-
-	@Autowired
-	private ClientService clientService;
-
-	@Autowired
-	private ADConfigurationService adConfigurationService;
-
-	@Autowired
-	private Select2Service select2Service;
-
-	@Autowired
-	private RoleCatalogueConfiguration configuration;
-
-	@Autowired
-	private ADGroupMappingService adGroupMappingService;
+	private static final Section permissionEntity = Section.IT_SYSTEM;
+	private final UserPermissionContext userPermissionContext;
 
 	@InitBinder(value = { "itSystemForm" })
 	public void initBinderItSystemForm(WebDataBinder binder) {
@@ -128,28 +100,72 @@ public class ItSystemController {
 		binder.addValidators(systemRoleValidator);
 	}
 
-	record ITSystemListDTO(long id, String name, boolean hidden, String identifier, ItSystemType systemType, boolean accessBlocked, boolean paused, List<String> adSyncServiceLabels) {}
+	record ITSystemListDTO(long id, String name, boolean hidden, String identifier, ItSystemType systemType, boolean accessBlocked, boolean paused, List<String> adSyncServiceLabels, Set<RequestableBy> requestPermission, Set<ApprovableBy> approvePermission, ItemPermissionDTO allowedActions) {}
 	@GetMapping(value = { "/ui/itsystem", "/ui/itsystem/list" })
 	public String list(Model model) {
-		List<ItSystem> itSystems = itSystemService.getAll();
+		List<ItSystem> itSystems = new ArrayList<>();
 
-		// people with restricted read-only access will be limited
-		if (securityUtil.hasRestrictedReadAccess()) {
-			List<Long> itSystemIds = securityUtil.getRestrictedReadAccessItSystems();
+		Map<Permission, PermissionConstraint> constraintMap = userPermissionContext.getConstraintsPerPermission(permissionEntity);
+		PermissionConstraint readConstraints = constraintMap.getOrDefault(Permission.READ, new PermissionConstraint(null, null));
 
-			itSystems = itSystems.stream().filter(it -> itSystemIds.contains(it.getId())).collect(Collectors.toList());
+		if (readConstraints.getConstrainedItSystemIds() == null) {
+			itSystems = itSystemService.getAllByDeletedFalse();
+		} else if(!readConstraints.getConstrainedItSystemIds().isEmpty()) {
+			itSystems = itSystemService.getAllByIdInAndDeletedFalse(readConstraints.getConstrainedItSystemIds());
 		}
 
-		itSystems = itSystems.stream().filter(its -> its.isDeleted() == false).collect(Collectors.toList());
+		ItemPermissionDTO allowedActions = userPermissionContext.getAllowedActionsForSection(permissionEntity);
 
+		List<ApprovableBy> globalApprovables = settingsService.getRolerequestApprover();
+		List<RequestableBy> globalRequestables = settingsService.getRolerequestRequester();
 		Map<Long, List<String>> mappingsForLabel = adGroupMappingService.getItSystemToADGroupsMap();
-		List<ITSystemListDTO> listDTOS = itSystems.stream().map(i -> new ITSystemListDTO(i.getId(), i.getName(), i.isHidden(), i.getIdentifier(), i.getSystemType(), i.isAccessBlocked(), i.isPaused(), mappingsForLabel.get(i.getId()))).collect(Collectors.toList());
+		List<ITSystemListDTO> listDTOS = itSystems.stream()
+				.map(i -> {
+					ItSystemType systemType = i.getSystemType();
+					boolean canCreate = allowedActions.isDuplicateable()
+							&& constraintMap.getOrDefault(Permission.CREATE, new PermissionConstraint(null, null)).allowsITSystem(i.getId());
+					boolean canRead = allowedActions.isReadable()
+							&& constraintMap.getOrDefault(Permission.READ, new PermissionConstraint(null, null)).allowsITSystem(i.getId());
+					boolean canUpdate = allowedActions.isEditable()
+							&& constraintMap.getOrDefault(Permission.UPDATE, new PermissionConstraint(null, null)).allowsITSystem(i.getId());
+					boolean canDelete = allowedActions.isDeletable()
+							&& constraintMap.getOrDefault(Permission.DELETE, new PermissionConstraint(null, null)).allowsITSystem(i.getId())
+							&& !(i.getIdentifier().equals(Constants.ROLE_CATALOGUE_IDENTIFIER)
+							|| systemType == ItSystemType.KOMBIT
+							|| systemType == ItSystemType.KSPCICS
+							|| systemType == ItSystemType.NEMLOGIN);
+					ItemPermissionDTO specificAllowedActions = new ItemPermissionDTO(canCreate, canRead, canUpdate, canDelete);
+                    final Set<ApprovableBy> approvers = new HashSet<>(i.getApproverPermission());
+                    final Set<RequestableBy> requesters = new HashSet<>(i.getRequesterPermission());
+                    if (approvers.contains(ApprovableBy.INHERIT)) {
+                        approvers.addAll(globalApprovables);
+                        approvers.remove(ApprovableBy.INHERIT);
+                    }
+                    if (requesters.contains(RequestableBy.INHERIT)) {
+                        requesters.addAll(globalRequestables);
+                        requesters.remove(RequestableBy.INHERIT);
+                    }
+					return new ITSystemListDTO(
+							i.getId(),
+							i.getName(),
+							i.isHidden(),
+							i.getIdentifier(),
+							i.getSystemType(),
+							i.isAccessBlocked(),
+							i.isPaused(),
+							mappingsForLabel.get(i.getId()),
+                            requesters,
+                            approvers,
+							specificAllowedActions
+					);
+				})
+				.toList();
 		model.addAttribute("itsystems", listDTOS);
 
 		return "itsystem/list";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission( section = Section.IT_SYSTEM, permission = Permission.CREATE)
 	@GetMapping(value = { "/ui/itsystem/newad" })
 	public String createGetAD(Model model) {
 		ItSystemForm form = new ItSystemForm();
@@ -160,7 +176,7 @@ public class ItSystemController {
 		return "itsystem/new";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission( section = Section.IT_SYSTEM, permission = Permission.CREATE)
 	@GetMapping(value = { "/ui/itsystem/newsaml" })
 	public String createGetSAML(Model model) {
 		ItSystemForm form = new ItSystemForm();
@@ -170,7 +186,7 @@ public class ItSystemController {
 		return "itsystem/new";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission( section = Section.IT_SYSTEM, permission = Permission.CREATE)
 	@GetMapping(value = { "/ui/itsystem/newmanual" })
 	public String createGetManual(Model model) {
 		ItSystemForm form = new ItSystemForm();
@@ -180,7 +196,7 @@ public class ItSystemController {
 		return "itsystem/new";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission( section = Section.IT_SYSTEM, permission = Permission.CREATE)
 	@PostMapping("/ui/itsystem/new")
 	public String createItSystem(Model model, @Valid @ModelAttribute("itSystemForm") ItSystemForm itSystemForm, BindingResult bindingResult) throws Exception {
 		if (bindingResult.hasErrors()) {
@@ -205,8 +221,8 @@ public class ItSystemController {
 		itSystem.setEmail(itSystemForm.getEmail());
 
 		// can be null
-		User user = userService.getByUuid(itSystemForm.getSelectedResponsibleUuid());
-		itSystem.setAttestationResponsible(user);
+		userService.getOptionalByUuid(itSystemForm.getSelectedResponsibleUuid())
+				.ifPresent(itSystem::setAttestationResponsible);
 
 		switch (itSystemForm.getSystemType()) {
 			case AD:
@@ -229,13 +245,13 @@ public class ItSystemController {
 		return "redirect:edit/" + itSystem.getId();
 	}
 
+	public record UserRoleListDTO(Long id, String name, String description, String delegatedFromCvr, boolean readOnly,  ItemPermissionDTO allowedActions) {}
 	@GetMapping("/ui/itsystem/view/{id}")
 	public String viewItSystem(Model model, @PathVariable("id") long id) {
 		ItSystem itSystem = itSystemService.getById(id);
 		if (itSystem == null) {
 			return "redirect:../list";
 		}
-
 		SystemRoleForm systemRoleForm = new SystemRoleForm();
 		systemRoleForm.setItSystemId(itSystem.getId());
 
@@ -245,7 +261,17 @@ public class ItSystemController {
 
 		model.addAttribute("itsystem", itSystem);
 		model.addAttribute("systemRoles", systemRoles);
-		model.addAttribute("userRoles", userRoleService.getByItSystem(itSystem));
+		model.addAttribute("userRoles", userRoleService.getByItSystem(itSystem).stream()
+				.map(userRole -> new UserRoleListDTO(
+						userRole.getId(),
+						userRole.getName(),
+						userRole.getDescription(),
+						userRole.getDelegatedFromCvr(),
+						userRole.isReadOnly(),
+						userPermissionContext.getSpecificAllowedActionsForITsystem(Section.USER_ROLE, itSystem.getId())
+				))
+				.toList()
+		);
 		model.addAttribute("attestationResponsibleName", itSystem.getAttestationResponsible() == null ? "" : itSystem.getAttestationResponsible().getName() + " (" + itSystem.getAttestationResponsible().getUserId() + ")");
 		model.addAttribute("systemOwnerName", itSystem.getSystemOwner() == null ? "" : itSystem.getSystemOwner().getName() + " (" + itSystem.getSystemOwner().getUserId() + ")");
 
@@ -256,11 +282,17 @@ public class ItSystemController {
 		return "itsystem/view";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission(section = Section.IT_SYSTEM, permission = Permission.UPDATE)
 	@GetMapping("/ui/itsystem/edit/{id}")
 	public String editItSystem(Model model, @PathVariable("id") long id) {
 		ItSystem itSystem = itSystemService.getById(id);
 		if (itSystem == null) {
+			return "redirect:../list";
+		}
+		Map<Permission, PermissionConstraint> constraintMap = userPermissionContext.getConstraintsPerPermission(permissionEntity);
+		PermissionConstraint readConstraints = constraintMap.getOrDefault(Permission.READ, new PermissionConstraint(null, null));
+
+		if (!readConstraints.allowsITSystem(id)) {
 			return "redirect:../list";
 		}
 
@@ -272,9 +304,26 @@ public class ItSystemController {
 				.collect(Collectors.toList());
 
 		ConvertSystemRolesForm convertSystemRolesForm = new ConvertSystemRolesForm();
-		convertSystemRolesForm.setCreateLink(true);
+		convertSystemRolesForm.setConvertOption(SystemRoleLinkType.NAME_AND_DESCRIPTION);
 
-		List<OUListForm> ouListForms = orgUnitService.getAll().stream().map(ou -> new OUListForm(ou, false)).toList();
+		Map<Permission, PermissionConstraint> orgunitConstraintMap = userPermissionContext.getConstraintsPerPermission(permissionEntity);
+		PermissionConstraint readOrgunitConstraint = orgunitConstraintMap.getOrDefault(Permission.READ, new PermissionConstraint(null, null));
+
+		List<OUListForm> ouListForms = orgUnitService.getAll().stream()
+				.filter(ou -> readOrgunitConstraint.allowsOrgunit(ou.getUuid()))
+				.map(ou -> new OUListForm(ou, false))
+				.toList();
+
+		List<String> selectedOus =itSystem.getOrgUnitFilterOrgUnits().stream()
+				.map(OrgUnit::getUuid)
+				.filter(readOrgunitConstraint::allowsOrgunit)
+				.toList();
+
+		Map<Permission, PermissionConstraint> systemConstraintMap = userPermissionContext.getConstraintsPerPermission(permissionEntity);
+		PermissionConstraint readSystemConstraint = systemConstraintMap.getOrDefault(Permission.READ, new PermissionConstraint(null, null));
+		List<UserRole> userRoles = userRoleService.getByItSystem(itSystem).stream()
+				.filter(ur -> readSystemConstraint.allowsITSystem(ur.getItSystem().getId()))
+				.toList();
 
 		model.addAttribute("unusedCount", itSystemService.getUnusedUserRolesCount(itSystem));
 		model.addAttribute("itsystem", itSystem);
@@ -282,10 +331,10 @@ public class ItSystemController {
 		model.addAttribute("unusedSystemRolesCount", systemRoles.stream().filter(sr -> !sr.isInUse()).count());
 		model.addAttribute("systemRoleForm", systemRoleForm);
 		model.addAttribute("itsystemMasterList", itSystemMasterService.findAll());
-		model.addAttribute("userRoles", userRoleService.getByItSystem(itSystem));
+		model.addAttribute("userRoles", userRoles);
 		model.addAttribute("convertSystemRolesForm", convertSystemRolesForm);
 		model.addAttribute("allOUs", ouListForms);
-		model.addAttribute("selectedOUs", itSystem.getOrgUnitFilterOrgUnits().stream().map(OrgUnit::getUuid).toList());
+		model.addAttribute("selectedOUs", selectedOus);
 		model.addAttribute("attestationResponsibleName", itSystem.getAttestationResponsible() == null ? "" : itSystem.getAttestationResponsible().getName() + " (" + itSystem.getAttestationResponsible().getUserId() + ")");
 		model.addAttribute("attestationResponsibleUuid", itSystem.getAttestationResponsible() == null ? "" : itSystem.getAttestationResponsible().getUuid());
 		model.addAttribute("kitosITSystemId", itSystem.getKitosITSystem() == null || !configuration.getIntegrations().getKitos().isEnabled() ? null : itSystem.getKitosITSystem().getId());
@@ -297,7 +346,7 @@ public class ItSystemController {
 		return "itsystem/edit";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission(section = Section.IT_SYSTEM, permission = Permission.UPDATE)
 	@PostMapping("/ui/itsystem/edit/{systemid}/addSystemRole")
 	public String addSystemRoleToItSystem(Model model, @PathVariable("systemid") long systemId, @Valid @ModelAttribute("systemRoleForm") SystemRoleForm systemRoleForm, BindingResult bindingResult) {
 		ItSystem itSystem = itSystemService.getById(systemId);
@@ -305,7 +354,7 @@ public class ItSystemController {
 			return "redirect:../../list";
 		}
 
-		if (systemRoleForm.getIdentifier().length() == 0) {
+		if (systemRoleForm.getIdentifier().isEmpty()) {
 			bindingResult.addError(new ObjectError("identifier", "html.errors.systemrole.identifier.notempty"));
 		}
 
@@ -315,7 +364,7 @@ public class ItSystemController {
 					.collect(Collectors.toList());
 
 			ConvertSystemRolesForm convertSystemRolesForm = new ConvertSystemRolesForm();
-			convertSystemRolesForm.setCreateLink(true);
+			convertSystemRolesForm.setConvertOption(SystemRoleLinkType.NAME_AND_DESCRIPTION);
 
 			model.addAttribute(bindingResult.getAllErrors());
 			model.addAttribute("unusedCount", itSystemService.getUnusedUserRolesCount(itSystem));
@@ -358,7 +407,7 @@ public class ItSystemController {
 		return "redirect:";
 	}
 
-	@RequireAdministratorRole
+	@RequirePermission(section = Section.IT_SYSTEM, permission = Permission.UPDATE)
 	@PostMapping("/ui/itsystem/systemrole/convert/{id}")
 	public String convertSystemRoles(Model model, @PathVariable("id") long id, @ModelAttribute("convertSystemRolesForm") ConvertSystemRolesForm convertSystemRolesForm) {
 		ItSystem itSystem = itSystemService.getById(id);
@@ -375,8 +424,8 @@ public class ItSystemController {
 		}
 
 		List<SystemRole> systemRoles = systemRoleService.getByItSystem(itSystem).stream()
-				.filter(sr -> systemRoleService.isInUse(sr) == false)
-				.collect(Collectors.toList());
+				.filter(sr -> !systemRoleService.isInUse(sr))
+				.toList();
 
 		for (SystemRole systemRole : systemRoles) {
 			UserRole userRole = new UserRole();
@@ -388,13 +437,14 @@ public class ItSystemController {
 			}
 
 			userRole.setDescription(systemRole.getDescription());
-			userRole.setIdentifier("id-" + UUID.randomUUID().toString());
+			userRole.setIdentifier("id-" + UUID.randomUUID());
 			userRole.setItSystem(itSystem);
-			userRole.setSystemRoleAssignments(new ArrayList<SystemRoleAssignment>());
+			userRole.setSystemRoleAssignments(new ArrayList<>());
 
-			if (convertSystemRolesForm.isCreateLink()) {
+			if (convertSystemRolesForm.getConvertOption() != null && !SystemRoleLinkType.NONE.equals(convertSystemRolesForm.getConvertOption())) {
 				userRole.setLinkedSystemRole(systemRole);
 				userRole.setLinkedSystemRolePrefix(convertSystemRolesForm.getPrefix());
+				userRole.setSystemRoleLinkType(convertSystemRolesForm.getConvertOption());
 			}
 
 			userRole = userRoleService.save(userRole);
